libs/@local/hashql/ast/tests/ui/lowering/import-resolver/rollback.jsonc
//@ run: fail
//@ description: Tests that imports are properly scoped and don't leak outside their containing expression
[
  "if",
  { "#literal": true },
  ["use", "math", { "#tuple": ["lshift"] }, "lshift"],
  "lshift"
  //~^ ERROR 'lshift' needs to be imported first
]
